# pythia-datasets

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  make_registry.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  linting.yaml  pypi-release.yaml
ci/: environment.yml
data/: NARR_19930313_0000.nc.xz  README.md  cesm2_grid_variables.nc  jan-17-co-asos.txt.xz  make_registry.py
pythia_datasets/: __init__.py  datasets.py  registry.txt
tests/: test_dataset.py  test_sample.py
